# unionsdata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  download.py  kd_tree.py  logging_setup.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  publish.yml
configs/: download_config.yaml
src/unions-dl/: download.py  logging_setup.py  utils.py
src/unionsdata/: config.py  config.yaml  cutout_stream.py  cutouts.py  download.py  download_config.yaml  kd_tree.py  logging_setup.py  main.py  make_rgb.py  plotting.py  stats.py  utils.py  verification.py  yaml_utils.py
src/unionsdata/tui/: __init__.py  app.py  validators.py
src/unionsdata/tui/styles/: config_editor.tcss
src/unionsdata/tui/widgets/: __init__.py  band_selector.py  better_checkbox.py  coordinate_list.py  info_icon.py  path_input.py  rgb_selector.py
tests/integration/: test_run_download.py
tests/unit/: test_config.py  test_kd_tree.py  test_main.py  test_utils.py
