# ---- Build system requirements ----
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# ---- Project metadata & dependencies ----
[project]
name = "unionsdata"
dynamic = ["version"]
description = "Download imaging data from the UNIONS survey."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nick Heesters" }]

# ---- Runtime dependencies ----
dependencies = [
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "astropy>=7.1.0",
    "scipy>=1.16.0",
    "vos>=3.6.3",
    "concurrent-log-handler>=0.9.28",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

# ---- Optional dependency groups for dev tooling, tests, docs, etc. ----
[project.optional-dependencies]
dev = [
    # Testing tools
    "pytest>=8.0",
    "pytest-mock",
    "pytest-cov>=4.0",
    'pre-commit>=4.0',
    # Code quality tools
    "ruff>=0.5.7",
    "mypy>=1.18.2",
    # Type stubs for better type checking
    "pandas-stubs",
    "types-PyYAML",
    "types-tqdm",
    "scipy-stubs",
    "types-psutil",
]

# ---- Console script entry points ----
[project.scripts]
unionsdata = "unionsdata.main:cli_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/unionsdata"]

[tool.hatch.build]
include = [
    "src/unionsdata/config.yaml"
]

[tool.hatch.version]
source = "vcs"

# ---- Test configuration ----
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-v",                        # Verbose output (show each test name)
    "--cov=unionsdata",           # Measure code coverage for unionsdata package
    "--cov-report=term-missing", # Show which lines aren't covered
]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true  # All functions must have type hints
disallow_incomplete_defs = true  # All functions must have complete type hints
check_untyped_defs = true    # Type check untyped functions

disallow_any_generics = true  # Must use e.g., list[int], not list
warn_unused_ignores = false  # Warn about unused '# type: ignore' comments
warn_redundant_casts = true  # Warn about unnecessary casts
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "astropy.*",
    "astroquery.*",
    "photutils.*",
    "sep",
    "pywt",
    "zoobot.*",
    "pyarrow.*",
    "joblib",
    "astride",
    "vos",
    "sklearn.*",
    "PIL",
]
ignore_missing_imports = true

# ---- Ruff configuration ----
[tool.ruff]
line-length = 100              # Max line length (matches your existing config)
target-version = "py311"       # Target Python 3.11 syntax
extend-include = ["*.ipynb"]   # Also lint/format Jupyter notebooks (your setting)

# Linting rules
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 violations)
    "W",   # pycodestyle warnings
    "F",   # pyflakes (detect unused imports, undefined names, etc.)
    "I",   # isort (sort imports)
    "B",   # flake8-bugbear (find likely bugs)
    "C4",  # flake8-comprehensions (better list/dict comprehensions)
    "UP",  # pyupgrade (modernize Python syntax)
]
# Line too long - let the formatter handle this
ignore = ["E501"]

# Formatter settings
[tool.ruff.format]
quote-style = "single"         # Use 'single' quotes (your preference)
indent-style = "space"         # Use spaces, not tabs (your setting)
docstring-code-format = true   # Format code in docstrings (your setting)
line-ending = "auto"           # Auto-detect line endings (LF on Linux/Mac, CRLF on Windows)
